debug index js to redirect on invalid image id

--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -3,6 +3,7 @@
 	
 	<div class="alert alert-danger error" role="alert">
 		<h4>{{error}}</h4>
+		<h5>{{message}}<h5>
 	</div>
 	<p><a href="/">Back to homepage</a><p>
 </div>
