added get random image and make all test cases pass

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,11 +7,11 @@
 		<input type="radio" name="searchType" value="tags"> By Tags
 	</form>
 	<br>
-	{{foo}}
 	<form id="query" action="/search" method="post" class="form-group">
 		<input placeholder="Browse Collection" type="text" name="query" class="form-control search-bar">
-		<br>
-		<input type="submit" value="Search" class="submitButton">
+		<br>	
+		<input type="submit" value="Search Image" class="submitButton">
 	</form>
+	<a href="/search/random" id="random-btn"><input type="submit" value="Get Random Image" class="submitButton"> </a>
 	<br>	
 </div>
