--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -30,7 +30,7 @@
             	<div class="tags">
             		{{#each alchemyTags}}
 						{{#if this.text}}
-							<a class="tag">{{this.text}} : {{convertToPercentage this.score}} </a>
+							<a class="tag" href="http://localhost:3000/searchTags/{{this.tag}}">{{this.text}} : {{convertToPercentage this.score}} </a>
 						{{/if}}
 					{{/each}}
 				</div>
@@ -44,7 +44,7 @@
             	<div class="tags">
             		{{#each imaggaTags}}
 						{{#if this.tag}}
-							<a class="tag">{{this.tag}} : {{shortenDecimal this.confidence}} 
+							<a class="tag" href="http://localhost:3000/searchTags/{{this.tag}}">{{this.tag}} : {{shortenDecimal this.confidence}} 
 							</a>
 						{{/if}}
 					{{/each}}
