--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,7 @@ html, body{
 
 .pin {
 	display: inline-block;
+	display: -moz-inline-stack;
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
