--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,7 @@ html, body{
 }
 
 #columns {
+	overflow: hidden;
 	-webkit-column-count: 3;
 	-webkit-column-gap: 10px;
 	-webkit-column-fill: auto;
@@ -34,7 +35,6 @@ html, body{
 
 .pin {
 	display: inline-block;
-	display: -moz-inline-stack;
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
