changed wording on index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="page center-text" id="index-page">
 	<img class="bl-logo" src="/images/bl-logo.jpg" height=150 width=200>
-	<h1>British Library Machine Learning Project</h1>
-	<h4>Collections From Early 16th To Mid 19th Century</h4>
+	<h1>British Library Machine Learning Experiment</h1>
+	<h4>Browse Digital Collections From Early 16th To Mid 19th Century</h4>
 	<form action="">
 		<input type="radio" name="searchType" value="title" checked> By Titles | 
 		<input type="radio" name="searchType" value="tags"> By Tags
