--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,5 +13,6 @@
 		<input type="submit" value="Search Image" class="submitButton">
 	</form>
 	<a href="/search/random" id="random-btn"><input type="submit" value="Get Random Image" class="submitButton"> </a>
-	<br>	
+	<br>
+	<p id="bl-blog-info">For more on the British Library Big Data Experiment see the <a href="http://britishlibrary.typepad.co.uk/digital-scholarship/" target="blank">British Library Digital Scholarship Blog</a></p>	
 </div>
