--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,8 +14,9 @@
 	<body>
 		{{{body}}}
 		<div id="footer">
-			<img src='http://www.ucl.ac.uk/visual-identity/logos/standalone.png' height=30 id="ucl-logo"/>
-			<a href="http:/students.cs.ucl.ac.uk/2014/group12" class="link-corner" >About</a>
+			<a href="http://www.cs.ucl.ac.uk" target="blank"><img src='http://www.ucl.ac.uk/visual-identity/logos/standalone.png' height=30 id="ucl-logo"/></a>
+			<a href="http://students.cs.ucl.ac.uk/2014/group12" class="link-corner" target="blank" ><i class="fa fa-users"></i> About</a>
+			<a href="http://mombi93/group12-app" class="link-corner" target="blank" ><i class="fa fa-github"></i> Project Repository</a>
 		</div>
 	</body>
 
