added stats page in views and logic in indexjs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -248,6 +248,11 @@ a:hover{
 #ucl-logo{
 	float:right;
 }
+.back-search{
+	font-size: 25px;
+	padding-top: 50px;
+	float:right;
+}
 .link-corner{
 	float:right;
 	color: white;
