--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -1,7 +1,7 @@
 <div class="page" id="image-page">
 	<div id="image-page-header">
 		<a href="/"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100></a>
-		<a href="javascript:history.go(-1)">Back to search</a>
+		<a href="javascript:history.go(-1)" class="back-search"> <i class="fa fa-arrow-left"></i> Back to search</a>
 	</div>
 	<hr>
 	<h3 class="center-text">{{imageTitle}}</h3>
