added statistic page and its logic

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -7,7 +7,7 @@
 	<h3 class="center-text">{{imageTitle}}</h3>
 	<img src="{{url}}" id="image-size"/>
 	<div id="desc-panel">
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title">Image Details</h3>
             </div>
@@ -23,7 +23,7 @@
             </div>
       	</div>
       	{{#if alchemyTags}}
-		<div class="panel panel-default">
+		<div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Generated Tags : Alchemy</h3>
             </div>
@@ -39,7 +39,7 @@
       	</div>
       	{{/if}}
       	{{#if imaggaTags}}
-      	<div class="panel panel-default">
+      	<div class="panel panel-success">
             <div class="panel-heading">
               <h3 class="panel-title">Generated Tags : Imagga</h3>
             </div>
