--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -16,8 +16,8 @@
 		<div id="footer">
 			<a href="http://www.cs.ucl.ac.uk" target="blank"><img src='http://www.ucl.ac.uk/visual-identity/logos/standalone.png' height=30 id="ucl-logo"/></a>
 			<a href="http://students.cs.ucl.ac.uk/2014/group12" class="link-corner" target="blank" ><i class="fa fa-users"></i> About</a>
-			<a href="/stats" class="link-corner" target="blank" ><i class="fa fa-bar-chart"></i> Statistics</a>
-			<a href="http://mombi93/group12-app" class="link-corner" target="blank" ><i class="fa fa-github-alt"></i> Repository</a>
+			<a href="/stats" class="link-corner" ><i class="fa fa-bar-chart"></i> Statistics</a>
+			<a href="http://github.com/mombi93/group12-app" class="link-corner" target="blank" ><i class="fa fa-github-alt"></i> Repository</a>
 		</div>
 	</body>
 
