--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -7,17 +7,23 @@
     	<title>BL Web App</title>
     	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css"></link>
     	<link rel="stylesheet" href="/stylesheets/font-awesome.min.css"></link>
-    	<link rel="stylesheet" href="/stylesheets/style.css"></link>
-
     	<script type="text/javascript" src="/javascripts/pace.min.js"></script>
+    	<link rel="stylesheet" href="/stylesheets/style.css"></link>
 	</head>
 	<body>
 		{{{body}}}
 		<div id="footer">
-			<a href="http://www.cs.ucl.ac.uk" target="blank"><img src='http://www.ucl.ac.uk/visual-identity/logos/standalone.png' height=30 id="ucl-logo"/></a>
+			<a href="http://www.cs.ucl.ac.uk" target="blank"><img src='/images/ucl-logo.png' height=30 id="ucl-logo"/></a>
 			<a href="http://students.cs.ucl.ac.uk/2014/group12" class="link-corner" target="blank" ><i class="fa fa-users"></i> About</a>
 			<a href="/stats" class="link-corner" ><i class="fa fa-bar-chart"></i> Statistics</a>
 			<a href="http://github.com/mombi93/group12-app" class="link-corner" target="blank" ><i class="fa fa-github-alt"></i> Repository</a>
+			<p class="cc-license">
+				<a rel="license" href="http://creativecommons.org/publicdomain/mark/1.0/">
+					<img src="/images/cc.png"
+				     style="border-style: none;" alt="Public Domain Mark" height="30" />
+				</a>
+				<span class="cc-stmt">This work is free of known copyright restrictions.</span>
+			</p>
 		</div>
 	</body>
 
