added trailing zeros and changed bl logo

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="page center-text" id="index-page">
-	<a href="http://www.bl.uk/" target=blank><img class="bl-logo" src="/images/bl-logo.jpg" height=150 width=200></a>
+	<a href="http://www.bl.uk/" target=blank><img class="bl-logo" src="/images/bl-logo-new.png" height=150 width=200></a>
 	<h1>British Library Machine Learning Experiment</h1>
 	<h4>Browse Digital Collections From Early 16th To Mid 19th Century</h4>
 	<form action="">
