changed cc statement

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -22,7 +22,7 @@
 					<img src="/images/cc.png"
 				     style="border-style: none;" alt="Public Domain Mark" height="30" />
 				</a>
-				<span class="cc-stmt">This work is free of known copyright restrictions.</span>
+				<span class="cc-stmt">All collections used are free of known copyright restrictions.</span>
 			</p>
 		</div>
 	</body>
