added Ajax functionality

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -77,6 +77,9 @@
 			  <div class="modal-body">
 			    Most frequently co-occuring tags
 			    <br>
+			    <div class="tags" id="tags-in-modal">
+            		
+				</div>
 			  </div>
 			  <div class="modal-footer">
 			    <a class="search-tag-btn"><button type="button" class="btn btn-default">More results of this tag</button>
