--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -3,8 +3,8 @@
 		<a class="bl-top-logo" href="http://www.bl.uk/" target=blank><img class="bl-logo" src="/images/bl-logo-new.png" height=75 width=110></a>
 		<div id="search-bar-top">
 			<form action="">
-				<input type="radio" name="searchType" value="title" {{searchByTitle}}> By Titles | 
-				<input type="radio" name="searchType" value="tags" {{searchByTags}}> By Tags
+				<input id="by-title" type="radio" name="searchType" value="title" {{searchByTitle}}> By Titles | 
+				<input id="by-tag" type="radio" name="searchType" value="tags" {{searchByTags}}> By Tags
 			</form>
 			<form id="query" action="/search" method="post">
 				<input placeholder="Browse Collection" value="{{searchQuery}}" type="text" size="80" name="query">
