fixed ui problems and order of relevance UI

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -30,5 +30,6 @@
 	<script type="text/javascript" src="/javascripts/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/javascripts/util.js"></script>
+	<script type="text/javascript" src="/javascripts/masonry.pkgd.min.js"></script>
 
 </html>
