--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -26,7 +26,7 @@
 						<a href="/search/{{this._id}}">
 							<img src={{this.flickr_medium_source}} >
 						</a>
-						<a href="/search/{{this._id}}">
+						<a class="image-title" href="/search/{{this._id}}">
 							{{shortenString this.title}}
 						</a>
 						<hr>
