--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,22 +13,33 @@ html, body{
 
 #columns {
 	overflow: hidden;
-	-webkit-column-count: 3;
-	-webkit-column-gap: 10px;
-	-webkit-column-fill: auto;
-	-moz-column-count: 3;
-	-moz-column-gap: 10px;
-	-moz-column-fill: auto;
-	column-count: 3;
-	column-gap: 15px;
-	column-fill: auto;
+	z-index: 1;
+	padding:0.5%;
+	padding-left: 2%;
+	/*
+	display: -ms-flexbox;
+	-ms-flex-direction: column;
+	-ms-flex-wrap: wrap;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	height: 100vw;
+	max-height: 800px;
+	*/
 }
 
 .pin {
+	width: 23%;
 	display: inline-block;
+	z-index: 1;
+	margin-bottom: 10px;
+	
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+	border-radius: 5px;
+	padding: 15px;
+	/*
 	margin: 0 2px 15px;
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
@@ -42,6 +53,7 @@ html, body{
 	-moz-transition: all .2s ease;
 	-o-transition: all .2s ease;
 	transition: all .2s ease;
+	*/
 }
 
 .pin img {
@@ -57,22 +69,6 @@ html, body{
 	margin: 0;
 }
 
-@media (min-width: 960px) {
-	#columns {
-		-webkit-column-count: 4;
-		-moz-column-count: 4;
-		column-count: 4;
-	}
-}
-
-@media (min-width: 1100px) {
-	#columns {
-		-webkit-column-count: 5;
-		-moz-column-count: 5;
-		column-count: 5;
-	}
-}
-
 #random-btn{
 	text-decoration: none;
 	color:#333;
@@ -85,7 +81,7 @@ html, body{
 	display: inline-block;
 	height: 21px;
 	margin: 10px 10px 0 0;
-	padding: 0 7px 0 14px;
+	padding: 0 7px 0 7px;
 	white-space: nowrap;
 	position: relative;
 
@@ -102,49 +98,14 @@ html, body{
 	text-shadow: 0 1px rgba(255,255,255,0.4);
 
 	border-top: 1px solid #EDB14A;
+	border-left: 1px solid #EDB14A;
+
 	border-bottom: 1px solid #CE922E;
 	border-right: 1px solid #DCA03B;
-	border-radius: 1px 3px 3px 1px;
+	border-radius: 3px 3px 3px 3px;
 	box-shadow: inset 0 1px #FEE395, 0 1px 2px rgba(0,0,0,0.21);
 }
-a.tag:before {
-	content: '';
-	position: absolute;
-	top: 5px;
-	left: -6px;
-	width: 10px;
-	height: 10px;
 
-	background: -moz-linear-gradient(45deg, #fed970 0%, #febc4a 100%);
-	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#fed970), color-stop(100%,#febc4a));
-	background: -webkit-linear-gradient(-45deg, #fed970 0%,#febc4a 100%);
-	background: -o-linear-gradient(45deg, #fed970 0%,#febc4a 100%);
-	background: linear-gradient(135deg, #fed970 0%,#febc4a 100%);
-	background-color: #FEC95B;
-
-	border-left: 1px solid #EDB14A;
-	border-bottom: 1px solid #CE922E;
-	border-radius: 0 0 0 2px;
-	box-shadow: inset 1px 0 #FEDB7C, 0 2px 2px -2px rgba(0,0,0,0.33);
-}
-a.tag:before {
-	-webkit-transform: scale(1, 1.5) rotate(45deg);
-	-moz-transform: scale(1, 1.5) rotate(45deg);
-	-ms-transform: scale(1, 1.5) rotate(45deg);
-	transform: scale(1, 1.5) rotate(45deg);
-}
-a:after {
-	content: '';
-	position: absolute;
-	top: 7px;
-	left: 1px;
-	width: 5px;
-	height: 5px;
-	background: #FFF;
-	border-radius: 4px;
-	border: 1px solid #DCA03B;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 1px 1px rgba(0,0,0,0.21);
-}
 .tags a:hover {
 	color: #FFF;
 	text-shadow: -1px -1px 0 rgba(153,102,51,0.3);
@@ -186,7 +147,7 @@ a:hover{
 }
 
 #search-page-top{
-	z-index: 10px;
+	z-index: 10;
 	padding:5px;
 	display:inline;
 	position:fixed;
@@ -235,6 +196,7 @@ a:hover{
 	bottom:0px;
 	position:fixed;
 	background-color:#000;
+	z-index: 10;
 }
 #ucl-logo{
 	float:right;
