added charts and some UI fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,7 +73,15 @@ html, body{
 	text-decoration: none;
 	color:#333;
 }
+#imagga-chart{
 
+}
+#alchemy-chart{
+
+}
+tr.info td {
+    background-color: #ccc;
+}
 .panel-body{
 	padding-top:2px;
 }
