--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -30,8 +30,8 @@
 	<script type="text/javascript" src="/javascripts/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/javascripts/masonry.pkgd.min.js"></script>
-	<script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
-	<script type="text/javascript" src="http://code.highcharts.com/modules/exporting.js"></script>
+	<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+	<script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
 	<script type="text/javascript" src="/javascripts/util.js"></script>
 
 </html>
