--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -44,6 +44,11 @@
                                 </td>
                                 <td id="stat5"></td>
                             </tr>
+                             <tr>
+                                <td colspan="2">
+                                    <div id="collection-stats" style="min-width: 300px; height: 400px; margin: 0 auto"></div>
+                                </td>  
+                            </tr>
                             <tr>
                                 <td colspan="2">
                                     <div id="alchemy-tags" style="min-width: 300px; height: 400px; margin: 0 auto"></div>
