changed the link on stats page to point to bl website

--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -1,6 +1,6 @@
 <div class="page" id="image-page">
 	<div id="image-page-header">
-		<a href="/"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=110></a>
+		<a href="http://www.bl.uk"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=110></a>
 		<a href="javascript:history.go(-1)" class="back-search"><i class="fa fa-arrow-left"></i> Back</a>
 	</div>
 	<hr>
