--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,8 @@
 	<h1>British Library Machine Learning Experiment</h1>
 	<h4>Browse Digital Collections From Early 16th To Mid 19th Century</h4>
 	<form action="">
-		<input type="radio" name="searchType" value="title" checked> By Titles | 
-		<input type="radio" name="searchType" value="tags"> By Tags
+		<input id="by-title" type="radio" name="searchType" value="title" checked> By Titles | 
+		<input id="by-tag" type="radio" name="searchType" value="tags"> By Tags
 	</form>
 	<br>
 	<form id="query" action="/search" method="post" class="form-group">
