--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -25,7 +25,7 @@
                                 <td id="stat1"></td>
                             </tr>
                             <tr>
-                                <td>Number of Machine Tagged images
+                                <td>Number of images with machine tags
                                 </td>
                                 <td id="stat2"></td>
                             </tr>
@@ -40,9 +40,14 @@
                                 <td id="stat4"></td>
                             </tr>
                             <tr>
-                                <td>*Number of images with inconclusive results
+                                <td>*Number of images with inconclusive results (from Imagga and Alchemy)
                                 </td>
                                 <td id="stat5"></td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <div id="machine-tags" style="min-width: 300px; height: 400px; margin: 0 auto"></div>
+                                </td>
                             </tr>
                             <tr>
                                 <td colspan="2">
